Working app and new UI

--- a/RestaurantsFinder/app/src/main/res/layout/activity_display_restaurants.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/activity_display_restaurants.xml
@@ -5,11 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F2F2"
     tools:context=".MainActivity">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".DisplayRestaurants">
@@ -26,6 +25,13 @@
             app:layoutManager="LinearLayoutManager"
             />
 
+        <ProgressBar
+            android:id="@+id/progressBarRestaurant"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="95dp"
+            android:layout_height="91dp"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
 
 
     </FrameLayout>
@@ -38,6 +44,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
         app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
