--- a/RestaurantsFinder/app/src/main/res/layout/activity_favorites.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/activity_favorites.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#F2F2F2"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -37,6 +38,8 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
+      app:itemTextColor="@drawable/selector"
+      app:itemIconTint="@drawable/selector"
       app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
