--- a/RestaurantsFinder/app/src/main/res/drawable-anydpi/user_icon.xml
+++ b/RestaurantsFinder/app/src/main/res/drawable-anydpi/user_icon.xml
@@ -4,13 +4,14 @@
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="#333333"
-    android:alpha="0.6">
+    android:alpha="0.6"
+    android:autoMirrored="true">
   <group android:scaleX="1.1111112"
       android:scaleY="1.1111112"
       android:translateX="-1.3333334"
       android:translateY="-1.3333334">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M20,2H4.01c-1.1,0 -2,0.9 -2,2L2,22l4,-4h14c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2zM12,6c1.1,0 2,0.9 2,2s-0.9,2 -2,2s-2,-0.9 -2,-2S10.9,6 12,6zM16,14H8v-0.57c0,-0.81 0.48,-1.53 1.22,-1.85C10.07,11.21 11.01,11 12,11c0.99,0 1.93,0.21 2.78,0.58C15.52,11.9 16,12.62 16,13.43V14z"/>
+        android:pathData="M21.99,4c0,-1.1 -0.89,-2 -1.99,-2L4,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h14l4,4 -0.01,-18zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
   </group>
 </vector>
