--- a/RestaurantsFinder/app/src/main/res/layout/activity_login.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+
     <TextView
 
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
         android:gravity="center"
         android:text="Welcome to Restaurant Finder!"
         android:textSize="25dp"
@@ -19,15 +21,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
 
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="144dp"
         android:gravity="center"
-        android:text="Login!"
+        android:text="Insert your account information"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,21 +38,23 @@
         android:id="@+id/emailLoginField"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="199dp"
-        android:layout_marginBottom="198dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="36dp"
         android:ems="10"
         android:hint="Insert your email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
         android:id="@+id/passwordLoginField"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="36dp"
         android:ems="10"
         android:hint="Insert password"
         android:inputType="textPassword"
@@ -63,30 +66,45 @@
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="34dp"
+        android:backgroundTint="#7379FF"
         android:text="Login"
-        app:layout_constraintBottom_toTopOf="@+id/noAccountButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/passwordLoginField" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Don't have an account?"
+        app:layout_constraintBaseline_toBaselineOf="@+id/noAccountButton"
+        app:layout_constraintEnd_toStartOf="@+id/noAccountButton"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/noAccountButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
-        android:text="Don't have an account? Register here!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="13dp"
+        android:text="Register here!"
+        android:textColor="@color/mainColor"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <ProgressBar
         android:id="@+id/progressBarLogin"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="34dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/noAccountButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/noAccountButton"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
