--- a/RestaurantsFinder/app/src/main/res/layout/activity_main.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F2F2"
+    android:elevation="200dp"
+    android:textAlignment="gravity"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/showRestaurantsButton"
-        android:layout_width="153dp"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="59dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="172dp"
-        android:backgroundTint="@android:color/black"
-        android:radius="80dp"
+        android:backgroundTint="#7379FF"
+        android:radius="10px"
         android:text="See Restaurants"
-        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
     <TextView
         android:id="@+id/textView"
@@ -32,12 +36,13 @@
         android:layout_marginTop="85dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="473dp"
-        android:fontFamily="casual"
+        android:fontFamily="@font/nunito_bold"
         android:text="Restaurant Finder"
-        android:textColor="@android:color/black"
+        android:textColor="#2C2C2C"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,23 +53,43 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="77dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="75dp"
+        android:background="#fbfbfb"
+        android:foregroundTint="#FBFBFB"
+        app:elevation="12dp"
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu"/>
+        app:menu="@menu/bottom_nav_menu" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="220dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="267dp"
+        android:layout_marginBottom="255dp"
+        android:fontFamily="@font/nunito"
+        android:gravity="center"
+        android:text="Hello! Where are you going to eat today?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
