--- a/RestaurantsFinder/app/src/main/res/layout/item_restaurant_layout.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/item_restaurant_layout.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/tools"
-    android:layout_margin="10dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="0dp"
+    android:gravity="center"
     android:orientation="horizontal">
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="382dp"
-        android:layout_height="186dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="#FBFBFB"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="10dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
         app:cardPreventCornerOverlap="true"
@@ -26,20 +28,20 @@
 
         <ImageView
             android:id="@+id/resIcon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="left"
-            android:layout_margin="10dp"
+            android:layout_width="74dp"
+            android:layout_height="87dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="35dp"
             android:src="@drawable/restaurant_icon" />
 
         <TextView
             android:id="@+id/restaurantNameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="50dp"
             android:text="Restaurant name"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -48,10 +50,10 @@
             android:id="@+id/vicinityText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="50dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="65dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="50dp"
             android:text="vicinity"
             android:textSize="15sp" />
 
@@ -59,10 +61,10 @@
             android:id="@+id/ratingText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="100dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="112dp"
             android:layout_marginBottom="0dp"
-            android:layout_marginLeft="-150dp"
             android:text="4.8"
             android:textSize="15sp"
 
@@ -71,11 +73,11 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="175dp"
+            android:layout_marginTop="110dp"
             android:src="@drawable/star_icon"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="98dp"
-            android:layout_marginLeft="-125dp"
-            card_view:tint="@color/yellow">
+            card_view:tint="#E4C10E">
 
         </ImageView>
 
@@ -83,46 +85,35 @@
             android:id="@+id/numberOfReviewsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="100dp"
+            android:layout_gravity="left"
+            android:layout_marginLeft="230dp"
+            android:layout_marginTop="112dp"
             android:layout_marginBottom="20dp"
-            android:layout_marginLeft="-90dp"
             android:text="200"
             android:textSize="15sp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginLeft="260dp"
+            android:layout_marginTop="111dp"
             android:src="@drawable/user_icon"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="-60dp"
-            card_view:tint="@color/blue">
+            card_view:tint="#1A6CE8">
 
         </ImageView>
 
         <ImageView
             android:id="@+id/favoriteButton"
-            android:layout_width="44dp"
-            android:layout_height="38dp"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="90dp"
-            android:src="@drawable/favorite_icon"
-            card_view:tint="@color/red">
-
-        </ImageView>
-
-        <TextView
-            android:id="@+id/add_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="100dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="110dp"
-            android:text="Add to fav"
-            android:textSize="15sp" />
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="0dp"
+            android:src="@drawable/favorite_icon"
+            card_view:tint="#E91E63">
+
+        </ImageView>
 
 
     </androidx.cardview.widget.CardView>
