--- a/RestaurantsFinder/app/src/main/res/layout/activity_favorites.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/activity_favorites.xml
@@ -15,8 +15,14 @@
       android:layout_height="match_parent"
       tools:context=".Favorites">
 
-    <!-- A RecyclerView with some commonly used attributes -->
+    <TextView
+        android:id="@+id/nofavsAdded"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:gravity="center">
 
+    </TextView>
 
 
 
