--- a/RestaurantsFinder/app/src/main/res/layout/item_restaurant_layout.xml
+++ b/RestaurantsFinder/app/src/main/res/layout/item_restaurant_layout.xml
@@ -111,7 +111,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="0dp"
             android:src="@drawable/favorite_icon"
-            card_view:tint="#E91E63">
+            card_view:tint="@color/favColor">
 
         </ImageView>
 
