--- a/RestaurantsFinder/app/src/main/res/values/colors.xml
+++ b/RestaurantsFinder/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="red">#B30404</color>
     <color name="yellow">#FFEB3B</color>
     <color name="blue">#2196F3</color>
+    <color name= "favColor">#E91E63</color>
+    <color name="noFavColor">#5C5454</color>
 </resources>
